welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:5: error: not found: value b
while (b*bis != or+1) { avance();
       ^