welcome.lessons.welcome.variables.RunHalf.scala.code
override def run() {
var bis =0;
var or=0;
while (b*bis != or+1) { avance();
if (estSurBiscuit()) {bis= bis +1}
if (estSurOrange()) { or = or +1}
}
}
